--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "use-effect",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://armine-web.github.io/response-movie/",
   "dependencies": {
     "bootstrap": "^5.0.1",
     "cra-template": "1.2.0",
@@ -13,6 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
